--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
-# tasks file for .
+- name: "Add an Apt signing key For Fluentbit"
+  apt_key:
+    url: "https://packages.fluentbit.io/fluentbit.key"
+    state: present
+
+- name: "Add the Fluentbit repository into sources list"
+  apt_repository:
+    repo: "deb https://packages.fluentbit.io/ubuntu/xenial xenial main"
+    state: present
+
+- name: "Update repositories cache and install td-agent-bit"
+  apt:
+    name: "td-agent-bit"
+    update_cache: "yes"
+
+- name: "Start service td-agent-bit, if not running"
+  service:
+    name: "td-agent-bit"
+    state: started
