feat (configuration): makes the config file based on what user defines
Fluentbit configuration has four main sections: SERVICE, INPUT, FILTER, OUTPUT

Except SERVICE, the rest can be defined multiple times, multiple inputs, outputs
or multiple filters.

This commit uses user defined dictionary for SERVICE and list of dictionaries
defined by user for INPUT, OUTPUT and FILTER to generate the sections

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
-# defaults file for .
+sitewards__fluentbit__config_service_params: {}
+sitewards__fluentbit__inputs: []
+sitewards__fluentbit__filters: []
+sitewards__fluentbit__outputs: []
