--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,19 @@
 ---
-sitewards__fluentbit__config_service_params: {}
-sitewards__fluentbit__inputs: []
+sitewards__fluentbit__config_service_params:
+  "Flush": 5
+  "Daemon": "Off"
+  "Log_Level": "info"
+  "Parsers_File": "parsers.conf"
+  "Plugins_File": "plugins.conf"
+  "HTTP_Server": "Off"
+  "HTTP_Listen": "0.0.0.0"
+  "HTTP_Port": "2020"
+sitewards__fluentbit__inputs:
+  - "Name": "cpu"
+    "Tag": "cpu.local"
+    "Interval_Sec": 1
+
 sitewards__fluentbit__filters: []
-sitewards__fluentbit__outputs: []
+sitewards__fluentbit__outputs:
+  - "Name": "stdout"
+    "Match": "*"
